syntax = "proto3";
package cross.initiator;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/datachainlab/cross/x/core/initiator/types";

service Query {
  rpc SelfXCC(QuerySelfXCCRequest) returns (QuerySelfXCCResponse) {
    option (google.api.http).get = "/cross/initiator/selfxcc";
  }
}

message QuerySelfXCCRequest {}

message QuerySelfXCCResponse {
  google.protobuf.Any xcc = 1 [(gogoproto.nullable) = true];
}
